--- a/SEA_Application/Views/StudentCourses/Comments.cshtml
+++ b/SEA_Application/Views/StudentCourses/Comments.cshtml
@@ -6,10 +6,9 @@
 
 <style>
     #ReplyDiv {
-        border: 1px solid #26344B;
         cursor: pointer;
-        margin: auto;
-        width: 80%;
+        /*margin: auto;
+        width: 80%;*/
     }
 
     #CommentsSection {
@@ -20,7 +19,7 @@
         color: white;
     }*/
     .HeaderStyleOfComments {
-        background:#00B8EC;
+        background: #053F89;
         color: white;
     }
 
@@ -46,50 +45,87 @@
 </style>
 
 <input type="hidden" id="CommentHeadId" name="name" value="@ViewBag.CommentHeadId" />
+<input type="hidden" id="HiddenLessonId" name="name" value="@ViewBag.LessonEncryptedId" />
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+
+
+            <div class="card-body p-5">
 
 
 
-<div class="col-md-12">
-    <h3>Comments</h3>
+                <center>
+
+                    <a href="/StudentCourses/StudentLessons/@ViewBag.LessonEncryptedId"> <input id="BackButton" type="button" class="btn btn-danger " name="name" value="Back To Lesson" /></a>
+                </center>
 
 
-    <div id="CommentHead">
-        <center>
-
-           <a href="/StudentCourses/StudentLessons/@ViewBag.LessonEncryptedId"> <input id="BackButton" type="button" class="btn btn-danger " name="name" value="Back To Lesson" /></a>
-        </center>
-
-        <br />
-        <br />
+                <div class="col-md-8">
 
 
+
+                    <div id="CommentHead">
+
+
+
+                        <div id="CommentHeader">
+
+                        </div>
+
+                    </div>
+
+                    <br>
+                    <br>
+
+                </div>
+
+
+                <div class="col-md-8">
+
+                    <div id="CommentsSection" @*style="margin:auto;width:80%;"*@>
+                        @*<h3 style="color:black">All Comments</h3>*@
+
+                        <br />
+                    </div>
+
+                </div>
+
+                <div class="col-md-8">
+
+                    <div id="ReplyBox">
+
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
     </div>
-
-    <br>
-    <br>
-
 </div>
 
-
-<div class="col-md-12">
-
-    <div id="CommentsSection" style="margin:auto;width:80%;">
-        <h3 style="color:black">All Comments</h3>
-
-        <br />
-    </div>
-
-</div>
 
 <script>
 
     $(document).ready(function () {
 
+        
+        var HiddenLessonId = $("#HiddenLessonId").val();
 
-          $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+      //  alert(HiddenLessonId);
+
+        $("#BreadCrumbs").append(' <li> <a href="/Student_Dashboard/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li> <a href="/StudentCourses/Index"> Courses </a> <span>&gt;</span></li>');
+      //  $("#BreadCrumbs").append(' <li class=""><a id="BreadCrumps1" href="#">Lessons</a> <span>&gt;</span></li>');
+
         $("#BreadCrumbs").append(' <li class=""><a id="BreadCrumps1" href="#">Lessons</a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li class=""><a id="BreadCrumps1" href="#">Comments</a> </li>');
+
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Comments</a> </li>');
+
+
+        $("#PageHeader").html("Discussion Forum");
 
         var id = $("#CommentHeadId").val();
         //Comments page of lesson
@@ -110,9 +146,15 @@
 
 
 
-                $("#CommentHead").append('<div id="QADiv"  name ="' + data.CommentHeadId + '"   class ="CommentDivs" ><p class="HeaderStyleOfComments" id="TitleParagraph" style="padding:10px;"><b>' + data.Title + '</b></p><div style="padding:10px"> <p>' + data.Body + '</p> <p><b>' + dat + ' &nbsp; &nbsp; &nbsp;  ' + data.UserName + '</b></p><p><b></p> </b> </div></div>');
+                //$("#CommentHead").append('<div id="QADiv"  name ="' + data.CommentHeadId + '"   class ="CommentDivs" ><p class="HeaderStyleOfComments" id="TitleParagraph" style="padding:10px;"><b>' + data.Title + '</b></p><div style="padding:10px"> <p>' + data.Body + '</p> <p><b>' + dat + ' &nbsp; &nbsp; &nbsp;  ' + data.UserName + '</b></p><p><b></p> </b> </div></div>');
+                var initials = data.UserName.match(/\b\w/g) || [];
+                initials = ((initials.shift() || '') + (initials.pop() || '')).toUpperCase();
 
-                $("#CommentHead").append('<div id="ReplyDiv" > <div class="form-group" id="ReplySection"> <p class="HeaderStyleOfComments" style="padding:10px;"  for="comment">Reply:</p><div style="padding:10px;"> <textarea id="ReplyTextArea" class="form-control" rows="5" id="ReplyBox"></textarea> <br> <input  class="btn btn-primary " id="ReplyButton" name="ReplyButton" value="Reply"> </div>  </div> </div>');
+
+
+                $("#CommentHeader").append('<div class="d-flex py-3"><div class="mr-3 tabHeading"><span class="initialCircle">' + initials + '</span></div><div class=""> <a href = "#"><h3  class="tabMainHeading mt-0 mb-2 QuestionHeader">' + data.Title + '</h3></a><p>' + data.Body + '</p><div class="metaInfoQues">' + data.UserName + ' <strong class="ml-2">' + dat + '</strong></div></div></div><hr>');
+
+
 
                 AllComments();
 
@@ -122,28 +164,28 @@
         })
 
 
-        $("#CommentHead").on('click', "#ReplyButton", function () {
+        $("#ReplyBox").on('click', "#ReplyButton", function () {
 
             var ReplyTextAreaValue = $("#ReplyTextArea").val();
 
             if (ReplyTextAreaValue != "") {
 
-            $.ajax({
+                $.ajax({
 
-                type: "POST",
-                url: "/StudentCourses/CommentReply",
-                data: { "CommentHeadId": id, "UserComment": ReplyTextAreaValue },
-                success: function (data) {
+                    type: "POST",
+                    url: "/StudentCourses/CommentReply",
+                    data: { "CommentHeadId": id, "UserComment": ReplyTextAreaValue },
+                    success: function (data) {
 
-                    $("#ReplyTextArea").val("");
+                        $("#ReplyTextArea").val("");
 
-                    location.reload();
+                        location.reload();
 
-                }
+                    }
 
 
 
-            })
+                })
 
             }
 
@@ -153,7 +195,7 @@
 
 
         })
-   
+
 
         function AllComments() {
 
@@ -166,8 +208,9 @@
 
                     debugger
 
+                    var a = 0;
                     $.each(data, function (index) {
-
+                        a = 1;
                         var value = new Date(parseInt(data[index].Date.replace(/(^.*\()|([+-].*$)/g, '')));
                         var dat = value.getMonth() +
                             1 +
@@ -177,17 +220,31 @@
                             value.getFullYear();
 
 
-                        $("#CommentsSection").append('<div id=""  class ="CommentDivs" ><p id="TitleParagraph"  class="HeaderStyleOfComments" style="padding:10px;"><b>' + data[index].UserName + '</b></p> <div style="padding:10px"> <p>' + data[index].CommentName + '</p> <p><b>' + dat + '</b></p></div></div>');
+
+                        var initials = data[index].UserName.match(/\b\w/g) || [];
+                        initials = ((initials.shift() || '') + (initials.pop() || '')).toUpperCase();
+
+
+                        // $("#CommentsSection").append('<div id=""  class ="CommentDivs" ><p id="TitleParagraph"  class="HeaderStyleOfComments" style="padding:10px;"><b>' + data[index].UserName + '</b></p> <div style="padding:10px"> <p>' + data[index].CommentName + '</p> <p><b>' + dat + '</b></p></div></div>');
+
+
+                        $("#CommentsSection").append('<div class="d-flex py-3"><div class="mr-3 tabHeading"><span class="initialCircle">' + initials + '</span></div><div class=""> <a href = "#"><h3  class="tabMainHeading mt-0 mb-2 QuestionHeader">' + data[index].UserName + '</h3></a><p>' + data[index].CommentName + '</p><div class="metaInfoQues">' + dat + ' </div></div></div><hr>');
 
 
                     })
 
-                }
+
+                    if (a == 1) {
+                        $("#CommentsSection").prepend('<h3 style="color:black">All Comments</h3>');
+
+                    }
+                }//end of success function
 
             })
 
+            $("#ReplyBox").append('<div id="ReplyDiv" > <div class="form-group" id="ReplySection"> <p class="" style="padding:10px;font-size:18px;"  for="comment">Reply:</p><div style=""> <textarea id="ReplyTextArea" class="form-control" rows="5" id="ReplyBox"></textarea> <br> <input  class="btn btn-primary " id="ReplyButton" name="ReplyButton" value="Reply"> </div>  </div> </div>');
 
-        }
+        }// All Comment function
 
     })
 
