--- a/SEA_Application/Views/StudentAssignmentSubmitted/StudentLessonTracking.cshtml
+++ b/SEA_Application/Views/StudentAssignmentSubmitted/StudentLessonTracking.cshtml
@@ -8,46 +8,46 @@
 <script>
     $(document).ready(function () {
 
-        
-                   $("#PageHeader").html("Lesson Tracking");
 
-            $("#BreadCrumbs").append(' <li> <a href="#"> Home </a> <span>&gt;</span></li>');
-            $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Tracking </a></li>');
+        $("#PageHeader").html("Lesson Tracking");
 
-             var   table = $('#datatable').dataTable({
-                buttons: [
-                    {
-                        text: ''
-                    },
-                    {
-                        text: '',
-                        action: function (e, dt, button, config) {
-                            window.location.href = '';
-                        }
-                    },
-                    {
-                        text: ''
-                    }
-                ],
-                "language": {
-                    "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
-                        "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
-                        "  </div>\n" +
-                        "  </div>",
-                    "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
-                    "paginate": {
-                        "first": "Firstt",
-                        "last": "Lastt",
-                        "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
-                        "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
+        $("#BreadCrumbs").append(' <li> <a href="#"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Tracking </a></li>');
+
+        var table = $('#datatable').dataTable({
+            buttons: [
+                {
+                    text: ''
+                },
+                {
+                    text: '',
+                    action: function (e, dt, button, config) {
+                        window.location.href = '';
                     }
                 },
-                "searching": true,
-                // dom: '<"class">Blfrtip',
-                dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
-                    "<'row'<'col-sm-12 datatablesData'tr>>" +
-                    "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
-               });
+                {
+                    text: ''
+                }
+            ],
+            "language": {
+                "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
+                    "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
+                    "  </div>\n" +
+                    "  </div>",
+                "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
+                "paginate": {
+                    "first": "Firstt",
+                    "last": "Lastt",
+                    "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
+                    "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
+                }
+            },
+            "searching": true,
+            // dom: '<"class">Blfrtip',
+            dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
+                "<'row'<'col-sm-12 datatablesData'tr>>" +
+                "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
+        });
         //$("#example").dataTable();
 
         //$('.table').on('click', 'tbody tr', function () {
@@ -125,11 +125,7 @@
                             <tr>
 
                                 <th>
-                                    @Html.DisplayNameFor(model => model.AspNetUser.Name)
-                                </th>
-                                
-                                <th>
-                                   Assignment Status
+                                    Student Name
                                 </th>
                                 <th>
                                     <span>Lesson Name</span>
@@ -138,6 +134,11 @@
                                 <th>
                                     Is Completed
                                 </th>
+                                <th>
+                                    Assignment Status
+                                </th>
+
+
                             </tr>
                         </thead>
 
@@ -145,32 +146,33 @@
 
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.AspNetUser.Name)
-                                    </td>
-                                   
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Assignment_Status)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.AspnetLesson.Name)
-                                    </td>
-                                    <td>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.AspNetUser.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.AspnetLesson.Name)
+                                </td>
+                                <td>
 
-                                        @if (item.IsCompleted == true)
-                                        {
-                                            <span>Completed</span>
-                                        }
-                                        else
-                                        {
-                                            <span>No</span>
+                                    @if (item.IsCompleted == true)
+                                    {
+                                        <span>Completed</span>
+                                    }
+                                    else
+                                    {
+                                        <span>No</span>
 
-                                        }
+                                    }
 
-                                    </td>
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Assignment_Status)
+                                </td>
 
-                                </tr>
+
+
+                            </tr>
                             }
                         </tbody>
 
