--- a/SEA_Application/Views/StudentAssignmentSubmitted/TeacherComments.cshtml
+++ b/SEA_Application/Views/StudentAssignmentSubmitted/TeacherComments.cshtml
@@ -6,56 +6,71 @@
 
 
 
-
-<div class="box ">
-
-    @*<div class=""><h3 class="orange">Lesson Basic Info<span class="red-mark">*</span></h3></div>*@
-    <div class="box-body">
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
 
 
-        <div class="form-horizontal">
+            <div class="card-body p-5">
 
 
-            <div class="box box-primary">
-                <div class="box-header with-border"><h3 class="orange">Lesson Basic Info<span class="red-mark">*</span></h3></div>
-                <div class="box-body row">
+                @*<div class=""><h3 class="orange">Lesson Basic Info<span class="red-mark">*</span></h3></div>*@
 
 
 
-                    <div class="form-group">
 
-                        <label class="col-md-2">Teacher Comments</label>
+                @*<div class="box-header with-border"><h3 class="orange">Comment<span class="red-mark">*</span></h3></div>*@
 
-                        <div class="col-md-6">
+               
+
+                    <div class="form-group bmd-form-group pt-5">
+
+                        <label class="control-label">Teacher Comments</label>
+                        <div class="">
 
                             <input type="hidden" value="@ViewBag.Id" name="id" id="id" />
                             <textarea required id="TeacherComments" name="TeacherComments" rows="10" cols="50">
-    
-                                </textarea>
+                                                     @ViewBag.TeacherComments
+                                            </textarea>
 
                         </div>
                     </div>
 
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-6">
-                            <input id="SubmitBtn" type="submit" value="Submit" class="btn btn-primary" />
-                            <button type="button" class="btn btn-danger" id="btnCancel">Cancel</button>
-                        </div>
-                    </div>
+                    @*<div class="form-group">
+            <div class="col-md-offset-2 col-md-6">
+                <input id="SubmitBtn" type="submit" value="Submit" class="btn btn-primary" />
+                <button type="button" class="btn btn-danger" id="btnCancel">Cancel</button>
+            </div>
+        </div>*@
+
+            <br />
+                    <button type="submit" id="SubmitBtn" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                    <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <i class="material-icons mr-2">cached</i>  Cancel
+                    </button>
 
 
                 </div>
             </div>
-        </div>
 
 
 
     </div>
 </div>
+
 <script>
 
     $(document).ready(function () {
+
+        $("#PageHeader").html("Add Comment");
+
+        $("#BreadCrumbs").append(' <li> <a href="#"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/StudentAssignmentSubmitted/StudentAssignments"> Student Assignments </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#"> Add Comment</a></li>');
+
 
 
         $("#btnCancel").click(function () {
@@ -91,3 +106,6 @@
     })
 
 </script>
+
+
+
