--- a/SEA_Application/Views/TeacherCommentsOnCourses/Index.cshtml
+++ b/SEA_Application/Views/TeacherCommentsOnCourses/Index.cshtml
@@ -37,7 +37,11 @@
 
     $(document).ready(function () {
 
-        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span></span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/Teacher_Dashboard/Dashboard"> Home </a> <span>&gt;</span></li>');
+
+        $("#BreadCrumbs").append(' <li class="active"> <a href="#"> Subjects </a> <span></span></li>');
+
+
 
         $.ajax({
             type: "POST",
@@ -47,7 +51,7 @@
 
                 $.each(data, function (key, value1) {
 
-                    $("#Subjectlist").append(' <div class="col-md-6 col-lg-3"> <a href="/StudentCourses/SubjectTopics/' + value1.Id + '" class="subject-list-box"> ' + value1.SubjectName + ' <br /> Science </a></div>');
+                    $("#Subjectlist").append(' <div class="col-md-6 col-lg-3"> <a href="/TeacherCommentsOnCourses/SubjectTopics/' + value1.Id + '" class="subject-list-box"> ' + value1.SubjectName + ' <br />  </a></div>');
 
                 })
 
